--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -312,7 +312,7 @@
             <a class="icon icon-pattern-fill" id="btn_center">&nbsp;</a>
         </div>
         <div class="copyright">
-            <a href="#">Copyright ©1996-2017 Hongkong Land Corporation All Rights Reserved</a>
+            <a href="#">Copyright ©1996-2020 LotsWxxw Corporation All Rights Reserved</a>
         </div>
         <script type="text/html" id="login_template">
             <div style="padding:10px 20px;">
@@ -393,113 +393,7 @@
     }
 
 
-    (function () {
-        $('#btn_alert').on(A.options.clickEvent, function (e) {
-            A.alert('提示', '这是一个Alert');
-            return false;
-        });
-        $('#btn_confirm').on(A.options.clickEvent, function () {
-            A.confirm('提示', '这是一个Confirm！',
-                function () {
-                    A.showToast('你选择了“确定”');
-                },
-                function () {
-                    A.alarmToast('你选择了“取消”');
-                });
-            return false;
-        });
-        $('#btn_loading').on(A.options.clickEvent, function () {
-            A.showMask(function () {
-                A.showToast('您已关闭请求');
-            });
-            setTimeout(function () {
-                A.hideMask();
-            }, 2000);
-            return false;
-        });
-        $('#btn_center').on(A.options.clickEvent, function () {
-            var $popup = A.popup({
-                html: $('#login_template').html(),
-                css: {width: 'auto'},
-                pos: 'center'
-            });
-            $popup.popup.find('button').on(A.options.clickEvent, function () {
-                A.confirm('提示', '确定切换登录吗？', function () {
-                    $popup.close();
-                });
-            });
-            return false;
-        });
-        $('#btn_t_top').on(A.options.clickEvent, function () {
-            var $popup = new A.Popup({
-                html: '这是一个来自顶部的弹出框',
-                pos: 'top',
-            }).on('popupopen', function () {
-                A.showToast('打开的时候提示1');
-            }).on('popupclose', function () {
-                A.showToast('关闭的时候提示');
-            }).open(function () {
-                //this对象就是A.popup对象，this.popup就是弹出窗的$DOM对象
-                //alert(this.popup.html());//得到就是弹出窗的代码片段
-                A.showToast('打开的时候提示2');
-            });
-            setTimeout(function () {
-                //手动关闭弹出窗
-                $popup.close();
-            }, 2000);
-            return false;
-        });
-        $('#btn_t_bottom').on(A.options.clickEvent, function () {
-            A.popup({
-                html: '这是一个来自底部弹出框',
-                pos: 'bottom',
-            });
-            return false;
-        });
-        $('#btn_t_left').on(A.options.clickEvent, function () {
-            A.popup({
-                html: '这是一个来自左边的弹出框',
-                pos: 'left',
-            });
-            return false;
-        });
-        $('#btn_t_right').on(A.options.clickEvent, function () {
-            A.popup({
-                html: '这是一个来自右边的弹出框',
-                pos: 'right',
-            });
-            return false;
-        });
-        $('#btn_actionsheet').on(A.options.clickEvent, function () {
-            A.actionsheet([{
-                text: '这是第一个菜单',
-                handler: function () {
-                    A.showToast('这是第一个菜单！');
-                }
-            }, {
-                text: '这是第二个菜单',
-                handler: function () {
-                    A.showToast('这是第二个菜单！');
-                }
-            }]);
-            return false;
-        });
 
-        $('#btn_popover').on(A.options.clickEvent, function () {
-            A.popover([{
-                text: '这是第一个菜单',
-                handler: function () {
-                    A.showToast('这是第一个菜单！');
-                }
-            }, {
-                text: '这是第二个菜单',
-                handler: function () {
-                    A.showToast('这是第二个菜单！');
-                }
-            }], this);
-            return false;
-        });
-    })();
 
 </script>
 <script src="../static/assets/third/jquery/jquery-2.1.3.min.js"></script>
@@ -509,7 +403,7 @@
 <script type="text/javascript" src="../static/assets/bridge/agile.exmobi.js"></script>
 <script type="text/javascript" src="../static/assets/app/js/app.seedsui.js"></script>
 <script src="../static/assets/third/seedsui/plugin/seedsui/seedsui.min.js"></script>
-<script type="text/javascript" src="../static/crypto.js"></script>
+<script type="text/javascript" src="../static/js/cryptojs.js"></script>
 
 </body>
 </html>
