添加查看歌曲历史的页面

--- a/src/main/resources/templates/curriculum_details_info.html
+++ b/src/main/resources/templates/curriculum_details_info.html
@@ -64,7 +64,7 @@
                     <div class="box-flex-1 tbpadding8">
                         <p class="nowrap title bold">
                         参训情况明细
-						<a href="classes_begin.html" class="button right radius4 outline noborder color-11 bold">会场：重庆</a>
+						<a href="getMusic.html" class="button right radius4 outline noborder color-11 bold">会场：重庆</a>
                         </p>
 						<small class="nowrap">
 						 <label class="color-default">
