--- a/src/main/resources/templates/getMusic.html
+++ b/src/main/resources/templates/getMusic.html
@@ -104,7 +104,7 @@
 			for (let dataKey in data.data) {
 				var tr;
 				tr=`<td style="text-align:center;"><span class="mark-warn">`+data.data[dataKey].creatTime+`</span></td>
-                                <td style="text-align:center;"><span >`+data.data[dataKey].songName+`</span></td>
+                                <td style="text-align:center;"><span class="mark-info">`+data.data[dataKey].songName+`</span></td>
                                 <td style="text-align:center;">`+data.data[dataKey].singer+`</td>
                                 <td style="text-align:center;">`+data.data[dataKey].songScore+`</td>`
 
