添加查看歌曲历史的页面

--- a/src/main/resources/templates/getMusic.html
+++ b/src/main/resources/templates/getMusic.html
@@ -104,9 +104,9 @@
 			for (let dataKey in data.data) {
 				var tr;
 				tr=`<td style="text-align:center;"><span class="mark-warn">`+data.data[dataKey].creatTime+`</span></td>
-                                <td style="text-align:center;">`+data.data[dataKey].songName+`</td>
-                                <td style="text-align:center;">`+data.data[dataKey].singer+`</td>
-                                <td style="text-align:center;">`+data.data[dataKey].songScore+`</td>`
+                    <td style="text-align:center;"><span class="mark-info">`+data.data[dataKey].songName+`</span></td>
+                    <td style="text-align:center;">`+data.data[dataKey].singer+`</td>
+                    <td style="text-align:center;">`+data.data[dataKey].songScore+`</td>`
 
 
 				$("#litsVal").append('<tr>'+tr+'</tr>');
